src/snapshots/rura__output_widget__tests__display.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"┌ Error: 1 ────────────────────────────────────────────────────────────────────────────────────────┐"
"│errors1                                                                                           │"
"│errors2                                                                                           │"
"│errors3                                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"1 out1                                                                                              "
"2 out2                                                                                              "
"3 out3                                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
