src/snapshots/rura__output_widget__tests__errors_pane_bottom.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"1 out1                                                                                              "
"2 out2                                                                                              "
"3 out3                                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌ Error: 1 ────────────────────────────────────────────────────────────────────────────────────────┐"
"│errors1                                                                                           │"
"│errors2                                                                                           │"
"│errors3                                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
