src/snapshots/rura__output_widget__tests__highlight 4.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"1              "
"2 l2 hl3       "
"3    hl5       "
"               "
"               "
"               "
