src/snapshots/rura__output_widget__tests__highlight 5.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"1   hl1        "
"2              "
"3   hl4        "
"               "
"               "
"               "
