src/snapshots/rura__output_widget__tests__highlight next 1x.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"18 line18          ▲"
"19 line19          ║"
"20 line20          ║"
"21 line21          ║"
"22 line22          █"
"23 line23          ║"
"24 line24          ║"
"25 line25          ║"
"26 line26          ║"
"27 line27          ▼"
