src/snapshots/rura__output_widget__tests__highlight prev 4x.snap
---
source: src/output_widget.rs
expression: terminal.backend()
---
"15 line15          ▲"
"16 line16          ║"
"17 line17          ║"
"18 line18          █"
"19 line19          █"
"20 line20          ║"
"21 line21          ║"
"22 line22          ║"
"23 line23          ║"
"24 line24          ▼"
